--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "backend-building",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +12,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "knex": "^0.19.1",
+    "node-fetch": "^2.6.0",
     "pg": "^7.12.1"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
